fix: make card width responsive on small screens

--- a/grocery/static/grocery/css/global.css
+++ b/grocery/static/grocery/css/global.css
@@ -18,6 +18,7 @@ body {
   margin: 0 auto;
   margin-top: 8rem;
   max-width: 30rem;
+  width: 90%;
   background: #fff;
   border-radius: 0.25rem;
   padding: 2rem;
